[project]
name = "boss"
version = "1.0.0"

description = "Boss package for BallsDex"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name="Mo Official", email="moofficial420@gmail.com" },
]
readme = "README.md"

# dependencies = [
#     "ballsdex>=3.0.0",
# ]

[project.urls]
Repository = "https://github.com/MoOfficial0000/BossPackageBD"
Documentation = "https://github.com/MoOfficial0000/BossPackageBD#readme"
Issues = "https://github.com/MoOfficial0000/BossPackageBD/issues"
